    If vm86 detected, the code will control the A20
    gate by calling the XMS interface instead of direct
    reading/writing via port 92h. This consideration
    is required for autoa20fix to cooperate with
    Microsoft Windows 3.1. Note that Windows 3.1 does
    not virtualize port 92h. If it did, this workaround
    would not be necessary.
  - Added autoa20fix option (enabled by default). This
    option when enabled attempts to resolve EXEPACK
    "Packed file is corrupt" errors by temporarily
    disabling the A20 gate and running the program
    again. This may provide better support for affected
    DOS applications than the LOADFIX option. If both
    autoa20fix and autoloadfix are set, then autoa20fix
    will be tried first, and if it did not work then
    autoloadfix will be tried next.
  - The autoloadfix config option changed to allocate
    only enough memory to keep the executable above the
    64KB boundary, instead of blindly allocating 64KB.
  - Fixed menu items "Rescan drive" and "Swap disk" in
    "Drive" menu being reversed. (Wengier)
  - Fixed Monkey Island CD audio issue with the game
    The Secret of Monkey Island when talking to pirate
    in the Scumm Bar. Fix logic per kcgen. (Wengier)
0.83.7
  - The primary DOSBox-X Wiki is now located at the
    URL: https://dosbox-x.com/wiki (Wengier)
  - Implemented the x86 dynamic core for both 32-bit
    and 64-bit systems by re-porting the code from SVN.
    Dynamic core now supports either the dynamic_x86
    or the dynamic_rec core. The dynamic_x86 core will
    be used by default for x86 and x86_64 platforms and
    if "core=dynamic" is set, and Windows 9x can be run
    in this dynamic core (although at this time may
    encounter some issue with the S3 driver). You can
    also explicit specify setting "core=dynamic_x86" or
    "core=dynamic_rec" for either the dynamic_x86 core
    or the dynamic_rec core. Also thank joncampbell123
    for the 64-bit fix. (Wengier)